--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-29 00:05+0300\n"
+"POT-Creation-Date: 2023-09-29 23:30+0300\n"
 "PO-Revision-Date: 2023-09-28 21:07+0000\n"
 "Last-Translator: Bernhard Bliem <bernhard.bliem@kausal.tech>\n"
-"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>"
-"\n"
+"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -72,7 +71,8 @@ msgstr "Kategorien"
 msgid "Basic information"
 msgstr "Grunddaten"
 
-#: actions/action_admin.py indicators/blocks.py
+#: actions/action_admin.py actions/blocks/category_page_layout.py
+#: indicators/blocks.py
 msgid "Progress"
 msgstr "Fortschritt"
 
@@ -290,9 +290,8 @@ msgstr "Wenn das Format „Numerisch“ ist, muss eine Einheit eingestellt werde
 msgid "Choice options"
 msgstr "Wahlmöglichkeiten"
 
-#: actions/attribute_type_admin.py actions/blocks/category_list.py
-#: actions/blocks/filters.py actions/category_admin.py pages/models.py
-#: reports/blocks/action_content.py
+#: actions/attribute_type_admin.py actions/blocks/choosers.py
+#: actions/category_admin.py pages/models.py
 msgid "Category type"
 msgstr "Kategorietyp"
 
@@ -311,12 +310,26 @@ msgstr "%(attribute_type)s (Auswahl)"
 msgid "%(attribute_type)s (text)"
 msgstr "%(attribute_type)s (Text)"
 
+#: actions/blocks/__init__.py
+msgid "Related plans"
+msgstr "Verbundene Pläne"
+
+#: actions/blocks/action_content.py actions/blocks/category_page_layout.py
+#: actions/blocks/choosers.py actions/blocks/filters.py
+msgid "Field"
+msgstr "Feld"
+
+#: actions/blocks/action_content.py actions/blocks/choosers.py
+#: actions/blocks/filters.py actions/models/attributes.py pages/models.py
+msgid "Category"
+msgstr "Kategorie"
+
 #: actions/blocks/action_content.py
 msgid "Heading to show instead of the default"
 msgstr "Überschrift, die anstelle der Standardüberschrift angezeigt wird"
 
-#: actions/blocks/action_content.py
-msgid "contact form"
+#: actions/blocks/action_content.py actions/blocks/category_page_layout.py
+msgid "Contact form"
 msgstr "Kontaktformular"
 
 #: actions/blocks/action_content.py
@@ -324,8 +337,26 @@ msgid "What label should be used in the public UI for the official name?"
 msgstr "Welche Bezeichnung sollte in der öffentlichen Benutzeroberfläche für den offiziellen Namen verwendet werden?"
 
 #: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "Field"
+msgid "Field label"
+msgstr "Feld"
+
+#: actions/blocks/action_content.py
 msgid "Description to show after the field content"
 msgstr "Beschreibung, die nach dem Feldinhalt angezeigt werden soll"
+
+#: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "action"
+msgid "Caption"
+msgstr "Maßnahme"
+
+#: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "official name"
+msgid "Official name"
+msgstr "Offizieller Name"
 
 #: actions/blocks/action_content.py
 #, python-format
@@ -345,16 +376,6 @@ msgid "Related actions"
 msgstr "Verbundene Maßnahmen"
 
 #: actions/blocks/action_content.py
-msgid "Attribute"
-msgstr "Attribut"
-
-#: actions/blocks/action_content.py actions/blocks/category_list.py
-#: actions/blocks/filters.py actions/models/attributes.py pages/blocks.py
-#: pages/models.py
-msgid "Category"
-msgstr "Kategorie"
-
-#: actions/blocks/action_content.py
 msgid "Full width"
 msgstr "Volle Breite"
 
@@ -363,7 +384,7 @@ msgid "Grid"
 msgstr "Gitter"
 
 #: actions/blocks/action_content.py actions/blocks/category_list.py
-#: pages/blocks.py
+#: actions/blocks/category_page_layout.py pages/blocks.py
 msgid "Heading"
 msgstr "Überschrift"
 
@@ -379,23 +400,27 @@ msgstr "Blocks"
 msgid "Section"
 msgstr "Abschnitt"
 
-#: actions/blocks/action_content.py actions/models/action.py
-msgid "official name"
-msgstr "Offizieller Name"
-
-#: actions/blocks/action_content.py
-msgid "Contact form"
-msgstr "Kontaktformular"
+#: actions/blocks/action_list.py
+msgid "Action highlights"
+msgstr "Maßnahmen-Highlights"
 
 #: actions/blocks/action_list.py
 msgid "Filter on category"
 msgstr "Filtere nach Kategorie"
 
+#: actions/blocks/action_list.py
+msgid "Action list"
+msgstr "Maßnahmenliste"
+
 #: actions/blocks/category_list.py pages/blocks.py reports/spreadsheets.py
 msgid "Lead"
 msgstr "Leittext"
 
-#: actions/blocks/category_list.py pages/models.py
+#: actions/blocks/category_list.py actions/blocks/filters.py
+msgid "Style"
+msgstr "Stil"
+
+#: actions/blocks/category_list.py pages/blocks.py pages/models.py
 msgid "Cards"
 msgstr "Karten"
 
@@ -403,21 +428,43 @@ msgstr "Karten"
 msgid "Table"
 msgstr "Tabelle"
 
+#: actions/blocks/category_list.py actions/blocks/category_page_layout.py
+msgid "Category list"
+msgstr "Kategorieliste"
+
 #: actions/blocks/category_list.py
-msgid "Value attribute"
-msgstr "Wertattribut"
+#, fuzzy
+#| msgid "field"
+msgid "Value field"
+msgstr "Feld"
+
+#: actions/blocks/category_list.py
+msgid "Category tree map"
+msgstr "Kategorie-Baumkarte"
 
 #: actions/blocks/category_page_layout.py
+msgid "Body"
+msgstr ""
+
+#: actions/blocks/category_page_layout.py
+#, fuzzy
+#| msgid "description"
+msgid "Description"
+msgstr "Beschreibung"
+
+#: actions/blocks/category_page_layout.py
+msgid "Basis"
+msgstr ""
+
+#: actions/blocks/category_page_layout.py actions/blocks/filters.py
+#: reports/blocks/action_content.py
 msgid "Implementation phase"
 msgstr "Umsetzungsphase"
 
-#: actions/blocks/category_page_layout.py
+#: actions/blocks/category_page_layout.py actions/blocks/filters.py
+#: reports/blocks/action_content.py
 msgid "Status"
 msgstr "Status"
-
-#: actions/blocks/filters.py reports/blocks/action_content.py
-msgid "Field"
-msgstr "Feld"
 
 #: actions/blocks/filters.py
 msgid "Label for 'show all'"
@@ -432,12 +479,12 @@ msgid "Buttons"
 msgstr "Schaltflächen"
 
 #: actions/blocks/filters.py
-msgid "Style"
-msgstr "Stil"
-
-#: actions/blocks/filters.py
 msgid "How many levels of category hierarchy to show"
 msgstr "Wie viele Ebenen der Kategoriehierarchie angezeigt werden sollen"
+
+#: actions/blocks/filters.py
+msgid "Depth"
+msgstr ""
 
 #: actions/blocks/filters.py
 #, python-format
@@ -445,27 +492,27 @@ msgid "Filter: %(filter_label)s"
 msgstr "Filter: %(filter_label)s"
 
 #: actions/blocks/filters.py reports/blocks/action_content.py
-msgid "responsible party"
+#, fuzzy
+#| msgid "responsible party"
+msgid "Responsible party"
 msgstr "Zuständige Stelle"
 
-#: actions/blocks/filters.py actions/models/action.py
-msgid "primary organization"
+#: actions/blocks/filters.py
+#, fuzzy
+#| msgid "primary organization"
+msgid "Primary organization"
 msgstr "Primärorganisation"
 
-#: actions/blocks/filters.py actions/models/action.py
-#: reports/blocks/action_content.py reports/spreadsheets.py
-msgid "implementation phase"
-msgstr "Umsetzungsphase"
-
-#: actions/blocks/filters.py actions/models/action.py actions/models/plan.py
-#: content/models.py feedback/models.py indicators/models.py
-#: notifications/models.py orgs/models.py pages/models.py
-msgid "plan"
+#: actions/blocks/filters.py actions/templates/actions/chooser_results.html
+#: actions/wagtail_admin.py
+msgid "Plan"
 msgstr "Plan"
 
-#: actions/blocks/filters.py actions/models/action.py
-msgid "schedule"
-msgstr "Zeitplan"
+#: actions/blocks/filters.py
+#, fuzzy
+#| msgid "Scheduled"
+msgid "Schedule"
+msgstr "Geplant"
 
 #: actions/category_admin.py
 msgid "Common category type"
@@ -569,8 +616,7 @@ msgstr "Name"
 msgid "impact"
 msgstr "Auswirkung"
 
-#: actions/export.py actions/models/action.py reports/blocks/action_content.py
-#: reports/spreadsheets.py
+#: actions/export.py actions/models/action.py reports/spreadsheets.py
 msgid "status"
 msgstr "Status"
 
@@ -597,6 +643,20 @@ msgstr "Öffentlich"
 #: actions/models/action.py
 msgid "visibility"
 msgstr "Sichtbarkeit"
+
+#: actions/models/action.py actions/models/plan.py content/models.py
+#: feedback/models.py indicators/models.py notifications/models.py
+#: orgs/models.py pages/models.py
+msgid "plan"
+msgstr "Plan"
+
+#: actions/models/action.py
+msgid "primary organization"
+msgstr "Primärorganisation"
+
+#: actions/models/action.py
+msgid "official name"
+msgstr "Offizieller Name"
 
 #: actions/models/action.py
 msgid "The name as approved by an official party"
@@ -635,6 +695,10 @@ msgstr "interne Notizen für Planadministratoren"
 msgid "internal notes"
 msgstr "interne Notizen"
 
+#: actions/models/action.py reports/spreadsheets.py
+msgid "implementation phase"
+msgstr "Umsetzungsphase"
+
 #: actions/models/action.py
 msgid "override status manually"
 msgstr "überschreibe Status manuell"
@@ -666,6 +730,10 @@ msgstr "Fertigstellung"
 #: actions/models/action.py
 msgid "The completion percentage for this action"
 msgstr "Der Fertigstellungsprozentsatz dieser Maßnahme"
+
+#: actions/models/action.py
+msgid "schedule"
+msgstr "Zeitplan"
 
 #: actions/models/action.py
 msgid "continuous action"
@@ -953,7 +1021,7 @@ msgid "action impact classes"
 msgstr "Maßnahmenauswirkungsklassen"
 
 #: actions/models/action.py feedback/models.py indicators/models.py
-#: orgs/models.py pages/models.py
+#: orgs/models.py pages/blocks.py pages/models.py
 msgid "URL"
 msgstr "URL"
 
@@ -1626,10 +1694,6 @@ msgstr "Überwachungsqualitätspunkt"
 msgid "monitoring quality points"
 msgstr "Überwachungsqualitätspunkte"
 
-#: actions/templates/actions/chooser_results.html actions/wagtail_admin.py
-msgid "Plan"
-msgstr "Plan"
-
 #: actions/templates/site_summary/actions.html
 #, python-format
 msgid ""
@@ -2225,12 +2289,22 @@ msgid "Indicator"
 msgstr "Indikator"
 
 #: indicators/blocks.py
+msgid "Indicator highlights"
+msgstr "Indikator-Highlights"
+
+#: indicators/blocks.py
 msgid "Graph"
 msgstr "Graph"
 
 #: indicators/blocks.py
 msgid "Animated"
 msgstr "Animiert"
+
+#: indicators/blocks.py
+#, fuzzy
+#| msgid "indicator goals"
+msgid "Indicator showcase"
+msgstr "Indikatorziele"
 
 #: indicators/chooser.py
 msgid "Choose an indicator"
@@ -2480,7 +2554,7 @@ msgstr "Gemeinsamer-Indikator-Dimension"
 msgid "common indicator dimensions"
 msgstr "Gemeinsamer-Indikator-Dimensionen"
 
-#: indicators/models.py
+#: indicators/models.py pages/models.py
 msgid "level"
 msgstr "Stufe"
 
@@ -3283,8 +3357,22 @@ msgid "large"
 msgstr "groß"
 
 #: pages/blocks.py
+#, fuzzy
+#| msgid "weight"
+msgid "Height"
+msgstr "Gewicht"
+
+#: pages/blocks.py
+msgid "Embed"
+msgstr ""
+
+#: pages/blocks.py
 msgid "Title"
 msgstr "Titel"
+
+#: pages/blocks.py
+msgid "Questions & Answers"
+msgstr "Fragen & Antworten"
 
 #: pages/blocks.py
 msgid "Big image"
@@ -3293,6 +3381,10 @@ msgstr "Großes Bild"
 #: pages/blocks.py
 msgid "Small image"
 msgstr "Kleines Bild"
+
+#: pages/blocks.py
+msgid "Front page hero block"
+msgstr "Hero-Block auf Titelseite"
 
 #: pages/blocks.py
 msgid "Links"
@@ -3313,6 +3405,10 @@ msgstr "Wenn dies gesetzt ist, wird es statt \"Dieser Dienst wird von [Herausgeb
 #: pages/blocks.py
 msgid "Email address"
 msgstr "E-Mail-Adresse"
+
+#: pages/blocks.py
+msgid "Action status pie charts"
+msgstr "Maßnahmenstatus-Kuchendiagramme"
 
 #: pages/models.py
 msgid "show in footer"
@@ -3343,36 +3439,8 @@ msgid "Common page configuration"
 msgstr "Allgemeine Seitenkonfiguration"
 
 #: pages/models.py
-msgid "Front page hero block"
-msgstr "Hero-Block auf Titelseite"
-
-#: pages/models.py
-msgid "Category list"
-msgstr "Kategorieliste"
-
-#: pages/models.py
-msgid "Indicator highlights"
-msgstr "Indikator-Highlights"
-
-#: pages/models.py
-msgid "Action highlights"
-msgstr "Maßnahmen-Highlights"
-
-#: pages/models.py
-msgid "Related plans"
-msgstr "Verbundene Pläne"
-
-#: pages/models.py
 msgid "Links to actions in specific category"
 msgstr "Links zu Maßnahmen in bestimmter Kategorie"
-
-#: pages/models.py
-msgid "Action status pie charts"
-msgstr "Maßnahmenstatus-Kuchendiagramme"
-
-#: pages/models.py
-msgid "Category tree map"
-msgstr "Kategorie-Baumkarte"
 
 #: pages/models.py
 msgid "Front page"
@@ -3407,10 +3475,6 @@ msgid "Paragraph"
 msgstr "Absatz"
 
 #: pages/models.py
-msgid "Questions & Answers"
-msgstr "Fragen & Antworten"
-
-#: pages/models.py
 msgid "Content page"
 msgstr "Inhaltseite"
 
@@ -3443,12 +3507,20 @@ msgid "Large"
 msgstr "Groß"
 
 #: pages/models.py
-msgid "icon size"
-msgstr "Symbolgröße"
+msgid "layout main top"
+msgstr ""
 
 #: pages/models.py
-msgid "Action list"
-msgstr "Maßnahmenliste"
+msgid "layout main bottom"
+msgstr ""
+
+#: pages/models.py
+msgid "layout aside"
+msgstr ""
+
+#: pages/models.py
+msgid "icon size"
+msgstr "Symbolgröße"
 
 #: pages/models.py
 msgid "Category page"
@@ -3727,13 +3799,15 @@ msgstr "letzte Anmeldung"
 msgid "contact for indicators"
 msgstr "Ansprechpartner für Indikatoren"
 
-#: reports/blocks/action_content.py reports/wagtail_admin.py
-msgid "Report type"
-msgstr "Berichtstyp"
-
 #: reports/blocks/action_content.py
 msgid "UUID of report field"
 msgstr "UUID des Berichtfelds"
+
+#: reports/blocks/action_content.py
+#, fuzzy
+#| msgid "Enable indicator comparison"
+msgid "Report comparison"
+msgstr "Indikatorenvergleich ermöglichen"
 
 #: reports/blocks/action_content.py
 msgid "Action field"
@@ -3750,6 +3824,16 @@ msgstr "Ebene der enthaltenden Organisation"
 #: reports/blocks/action_content.py
 msgid "In addition to the organization itself, an organizational unit containing the organization is included in the report. Counting from the top-level root organisation at level 1, which level in the organizational hierarchy should be used to find this containing organization? If left empty, don't add the containing organization to the report."
 msgstr "Der Bericht enthält nicht nur die Organisation selbst, sondern auch eine Organisationseinheit, die die Organisation enthält. Auf welcher Ebene in der Organisationshierarchie, ausgehend von der obersten Organisation auf Ebene 1, soll diese enthaltende Organisation gesucht werden? Wenn keine Angabe gemacht wird, wird die enthaltende Organisation nicht in den Bericht aufgenommen."
+
+#: reports/blocks/choosers.py reports/wagtail_admin.py
+msgid "Report type"
+msgstr "Berichtstyp"
+
+#: reports/blocks/choosers.py
+#, fuzzy
+#| msgid "Report type"
+msgid "Report type field"
+msgstr "Berichtstyp"
 
 #: reports/chooser.py
 msgid "Choose a report type"
@@ -3980,6 +4064,15 @@ msgstr "Benutzer"
 #: users/models.py
 msgid "No permission to remove the user belonging to plans you are not managing."
 msgstr "Keine Berechtigung zum Entfernen von Benutzern, die zu Plänen gehören, die Sie nicht verwalten."
+
+#~ msgid "contact form"
+#~ msgstr "Kontaktformular"
+
+#~ msgid "Attribute"
+#~ msgstr "Attribut"
+
+#~ msgid "Value attribute"
+#~ msgstr "Wertattribut"
 
 #~ msgid "Plan name"
 #~ msgstr "Name des Plans"
