--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-29 00:05+0300\n"
+"POT-Creation-Date: 2023-09-29 23:30+0300\n"
 "PO-Revision-Date: 2023-09-15 10:18+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
 "Language-Team: Swedish <https://weblate.kausal.tech/projects/watch/django/sv/>\n"
@@ -71,7 +71,8 @@ msgstr "Kategorier"
 msgid "Basic information"
 msgstr "Grundläggande information"
 
-#: actions/action_admin.py indicators/blocks.py
+#: actions/action_admin.py actions/blocks/category_page_layout.py
+#: indicators/blocks.py
 msgid "Progress"
 msgstr "Framsteg"
 
@@ -311,9 +312,8 @@ msgstr "Om formatet är \"Numerisk\" måste en enhet anges"
 msgid "Choice options"
 msgstr "attribut val alternativ"
 
-#: actions/attribute_type_admin.py actions/blocks/category_list.py
-#: actions/blocks/filters.py actions/category_admin.py pages/models.py
-#: reports/blocks/action_content.py
+#: actions/attribute_type_admin.py actions/blocks/choosers.py
+#: actions/category_admin.py pages/models.py
 msgid "Category type"
 msgstr "Kategorityp"
 
@@ -332,21 +332,55 @@ msgstr "%(attribute_type)s (val)"
 msgid "%(attribute_type)s (text)"
 msgstr "%(attribute_type)s (text)"
 
+#: actions/blocks/__init__.py
+#, fuzzy
+#| msgid "created at"
+msgid "Related plans"
+msgstr "skapad vid"
+
+#: actions/blocks/action_content.py actions/blocks/category_page_layout.py
+#: actions/blocks/choosers.py actions/blocks/filters.py
+msgid "Field"
+msgstr "Fält"
+
+#: actions/blocks/action_content.py actions/blocks/choosers.py
+#: actions/blocks/filters.py actions/models/attributes.py pages/models.py
+msgid "Category"
+msgstr "Kategori"
+
 #: actions/blocks/action_content.py
 msgid "Heading to show instead of the default"
 msgstr ""
 
-#: actions/blocks/action_content.py
-msgid "contact form"
-msgstr "kontaktformulär"
+#: actions/blocks/action_content.py actions/blocks/category_page_layout.py
+msgid "Contact form"
+msgstr "Kontaktformulär"
 
 #: actions/blocks/action_content.py
 msgid "What label should be used in the public UI for the official name?"
 msgstr "Vilken etikett ska användas i den offentliga användargränssnittet för det officiella namnet?"
 
 #: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "Field"
+msgid "Field label"
+msgstr "Fält"
+
+#: actions/blocks/action_content.py
 msgid "Description to show after the field content"
 msgstr "Beskrivning som ska visas efter fältinnehållet"
+
+#: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "action"
+msgid "Caption"
+msgstr "åtgärd"
+
+#: actions/blocks/action_content.py
+#, fuzzy
+#| msgid "official name"
+msgid "Official name"
+msgstr "officiellt namn"
 
 #: actions/blocks/action_content.py
 #, python-format
@@ -368,16 +402,6 @@ msgid "Related actions"
 msgstr "Sammanslagna åtgärder"
 
 #: actions/blocks/action_content.py
-msgid "Attribute"
-msgstr "Attribut"
-
-#: actions/blocks/action_content.py actions/blocks/category_list.py
-#: actions/blocks/filters.py actions/models/attributes.py pages/blocks.py
-#: pages/models.py
-msgid "Category"
-msgstr "Kategori"
-
-#: actions/blocks/action_content.py
 msgid "Full width"
 msgstr "Full bredd"
 
@@ -386,7 +410,7 @@ msgid "Grid"
 msgstr "Nät"
 
 #: actions/blocks/action_content.py actions/blocks/category_list.py
-#: pages/blocks.py
+#: actions/blocks/category_page_layout.py pages/blocks.py
 msgid "Heading"
 msgstr "Rubrik"
 
@@ -402,23 +426,27 @@ msgstr "Block"
 msgid "Section"
 msgstr "Sektion"
 
-#: actions/blocks/action_content.py actions/models/action.py
-msgid "official name"
-msgstr "officiellt namn"
-
-#: actions/blocks/action_content.py
-msgid "Contact form"
-msgstr "Kontaktformulär"
+#: actions/blocks/action_list.py
+msgid "Action highlights"
+msgstr "Actionhöjdpunkter"
 
 #: actions/blocks/action_list.py
 msgid "Filter on category"
 msgstr "Filtrera efter kategori"
 
+#: actions/blocks/action_list.py
+msgid "Action list"
+msgstr "Åtgärdslista"
+
 #: actions/blocks/category_list.py pages/blocks.py reports/spreadsheets.py
 msgid "Lead"
 msgstr "Leda"
 
-#: actions/blocks/category_list.py pages/models.py
+#: actions/blocks/category_list.py actions/blocks/filters.py
+msgid "Style"
+msgstr "Stil"
+
+#: actions/blocks/category_list.py pages/blocks.py pages/models.py
 msgid "Cards"
 msgstr "Kort"
 
@@ -426,23 +454,47 @@ msgstr "Kort"
 msgid "Table"
 msgstr "Tabell"
 
+#: actions/blocks/category_list.py actions/blocks/category_page_layout.py
+msgid "Category list"
+msgstr "Kategorilista"
+
 #: actions/blocks/category_list.py
-msgid "Value attribute"
-msgstr "Värdeattribut"
+#, fuzzy
+#| msgid "field"
+msgid "Value field"
+msgstr "fält"
+
+#: actions/blocks/category_list.py
+#, fuzzy
+#| msgid "Category type"
+msgid "Category tree map"
+msgstr "Kategorityp"
 
 #: actions/blocks/category_page_layout.py
+msgid "Body"
+msgstr ""
+
+#: actions/blocks/category_page_layout.py
+#, fuzzy
+#| msgid "description"
+msgid "Description"
+msgstr "beskrivning"
+
+#: actions/blocks/category_page_layout.py
+msgid "Basis"
+msgstr ""
+
+#: actions/blocks/category_page_layout.py actions/blocks/filters.py
+#: reports/blocks/action_content.py
 #, fuzzy
 #| msgid "implementation phase"
 msgid "Implementation phase"
 msgstr "genomförandefas"
 
-#: actions/blocks/category_page_layout.py
+#: actions/blocks/category_page_layout.py actions/blocks/filters.py
+#: reports/blocks/action_content.py
 msgid "Status"
 msgstr "Status"
-
-#: actions/blocks/filters.py reports/blocks/action_content.py
-msgid "Field"
-msgstr "Fält"
 
 #: actions/blocks/filters.py
 msgid "Label for 'show all'"
@@ -457,12 +509,12 @@ msgid "Buttons"
 msgstr "Knappar"
 
 #: actions/blocks/filters.py
-msgid "Style"
-msgstr "Stil"
-
-#: actions/blocks/filters.py
 msgid "How many levels of category hierarchy to show"
 msgstr "Hur många nivåer av kategorihierarkin som ska visas"
+
+#: actions/blocks/filters.py
+msgid "Depth"
+msgstr ""
 
 #: actions/blocks/filters.py
 #, python-format
@@ -470,26 +522,26 @@ msgid "Filter: %(filter_label)s"
 msgstr "Filter: %(filter_label)s"
 
 #: actions/blocks/filters.py reports/blocks/action_content.py
-msgid "responsible party"
+#, fuzzy
+#| msgid "responsible party"
+msgid "Responsible party"
 msgstr "ansvarig part"
 
-#: actions/blocks/filters.py actions/models/action.py
-msgid "primary organization"
+#: actions/blocks/filters.py
+#, fuzzy
+#| msgid "primary organization"
+msgid "Primary organization"
 msgstr "primär organisation"
 
-#: actions/blocks/filters.py actions/models/action.py
-#: reports/blocks/action_content.py reports/spreadsheets.py
-msgid "implementation phase"
-msgstr "genomförandefas"
+#: actions/blocks/filters.py actions/templates/actions/chooser_results.html
+#: actions/wagtail_admin.py
+msgid "Plan"
+msgstr "Planen"
 
-#: actions/blocks/filters.py actions/models/action.py actions/models/plan.py
-#: content/models.py feedback/models.py indicators/models.py
-#: notifications/models.py orgs/models.py pages/models.py
-msgid "plan"
-msgstr "planen"
-
-#: actions/blocks/filters.py actions/models/action.py
-msgid "schedule"
+#: actions/blocks/filters.py
+#, fuzzy
+#| msgid "schedule"
+msgid "Schedule"
 msgstr "schema"
 
 #: actions/category_admin.py
@@ -610,8 +662,7 @@ msgstr "namn"
 msgid "impact"
 msgstr "påverkan"
 
-#: actions/export.py actions/models/action.py reports/blocks/action_content.py
-#: reports/spreadsheets.py
+#: actions/export.py actions/models/action.py reports/spreadsheets.py
 msgid "status"
 msgstr "status"
 
@@ -638,6 +689,20 @@ msgstr "Offentlig"
 #: actions/models/action.py
 msgid "visibility"
 msgstr "synlighet"
+
+#: actions/models/action.py actions/models/plan.py content/models.py
+#: feedback/models.py indicators/models.py notifications/models.py
+#: orgs/models.py pages/models.py
+msgid "plan"
+msgstr "planen"
+
+#: actions/models/action.py
+msgid "primary organization"
+msgstr "primär organisation"
+
+#: actions/models/action.py
+msgid "official name"
+msgstr "officiellt namn"
 
 #: actions/models/action.py
 msgid "The name as approved by an official party"
@@ -676,6 +741,10 @@ msgstr "interna anteckningar för planadministratörer"
 msgid "internal notes"
 msgstr "interna anteckningar"
 
+#: actions/models/action.py reports/spreadsheets.py
+msgid "implementation phase"
+msgstr "genomförandefas"
+
 #: actions/models/action.py
 msgid "override status manually"
 msgstr "åsidosätta status manuellt"
@@ -707,6 +776,10 @@ msgstr "komplettering"
 #: actions/models/action.py
 msgid "The completion percentage for this action"
 msgstr "Slutförandeprocenten för denna åtgärd"
+
+#: actions/models/action.py
+msgid "schedule"
+msgstr "schema"
 
 #: actions/models/action.py
 #, fuzzy
@@ -1012,7 +1085,7 @@ msgid "action impact classes"
 msgstr "åtgärder påverkan klasser"
 
 #: actions/models/action.py feedback/models.py indicators/models.py
-#: orgs/models.py pages/models.py
+#: orgs/models.py pages/blocks.py pages/models.py
 msgid "URL"
 msgstr "URL"
 
@@ -1785,10 +1858,6 @@ msgstr "övervakningskvalitetspunkt"
 msgid "monitoring quality points"
 msgstr "övervakning av kvalitetspunkter"
 
-#: actions/templates/actions/chooser_results.html actions/wagtail_admin.py
-msgid "Plan"
-msgstr "Planen"
-
 #: actions/templates/site_summary/actions.html
 #, python-format
 msgid ""
@@ -2439,12 +2508,22 @@ msgid "Indicator"
 msgstr "Indikator"
 
 #: indicators/blocks.py
+msgid "Indicator highlights"
+msgstr "Indikatorhöjdpunkter"
+
+#: indicators/blocks.py
 msgid "Graph"
 msgstr "Graf"
 
 #: indicators/blocks.py
 msgid "Animated"
 msgstr "Animerad"
+
+#: indicators/blocks.py
+#, fuzzy
+#| msgid "indicator goals"
+msgid "Indicator showcase"
+msgstr "indikatormål"
 
 #: indicators/chooser.py
 msgid "Choose an indicator"
@@ -2698,7 +2777,7 @@ msgstr "indikator dimension"
 msgid "common indicator dimensions"
 msgstr "indikator dimensioner"
 
-#: indicators/models.py
+#: indicators/models.py pages/models.py
 msgid "level"
 msgstr "nivå"
 
@@ -3586,8 +3665,22 @@ msgid "large"
 msgstr "stor"
 
 #: pages/blocks.py
+#, fuzzy
+#| msgid "weight"
+msgid "Height"
+msgstr "vikt"
+
+#: pages/blocks.py
+msgid "Embed"
+msgstr ""
+
+#: pages/blocks.py
 msgid "Title"
 msgstr "Titel"
+
+#: pages/blocks.py
+msgid "Questions & Answers"
+msgstr "Frågor"
 
 #: pages/blocks.py
 msgid "Big image"
@@ -3596,6 +3689,10 @@ msgstr "Stor bild"
 #: pages/blocks.py
 msgid "Small image"
 msgstr "Liten bild"
+
+#: pages/blocks.py
+msgid "Front page hero block"
+msgstr "Framsida hjälte block"
 
 #: pages/blocks.py
 msgid "Links"
@@ -3622,6 +3719,12 @@ msgstr "Om detta anges kommer det att visas istället för \"Denna tjänst är p
 #| msgid "email address"
 msgid "Email address"
 msgstr "e-postadress"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Action statuses"
+msgid "Action status pie charts"
+msgstr "Åtgärdsstatus"
 
 #: pages/models.py
 msgid "show in footer"
@@ -3656,42 +3759,8 @@ msgid "Common page configuration"
 msgstr "Vanlig sidkonfiguration"
 
 #: pages/models.py
-msgid "Front page hero block"
-msgstr "Framsida hjälte block"
-
-#: pages/models.py
-msgid "Category list"
-msgstr "Kategorilista"
-
-#: pages/models.py
-msgid "Indicator highlights"
-msgstr "Indikatorhöjdpunkter"
-
-#: pages/models.py
-msgid "Action highlights"
-msgstr "Actionhöjdpunkter"
-
-#: pages/models.py
-#, fuzzy
-#| msgid "created at"
-msgid "Related plans"
-msgstr "skapad vid"
-
-#: pages/models.py
 msgid "Links to actions in specific category"
 msgstr "Länkar till åtgärder i en specifik kategori"
-
-#: pages/models.py
-#, fuzzy
-#| msgid "Action statuses"
-msgid "Action status pie charts"
-msgstr "Åtgärdsstatus"
-
-#: pages/models.py
-#, fuzzy
-#| msgid "Category type"
-msgid "Category tree map"
-msgstr "Kategorityp"
 
 #: pages/models.py
 msgid "Front page"
@@ -3724,10 +3793,6 @@ msgstr "Led punkt direkt under rubriken"
 #: pages/models.py
 msgid "Paragraph"
 msgstr "Paragraf"
-
-#: pages/models.py
-msgid "Questions & Answers"
-msgstr "Frågor"
 
 #: pages/models.py
 msgid "Content page"
@@ -3772,12 +3837,20 @@ msgid "Large"
 msgstr "stor"
 
 #: pages/models.py
-msgid "icon size"
+msgid "layout main top"
 msgstr ""
 
 #: pages/models.py
-msgid "Action list"
-msgstr "Åtgärdslista"
+msgid "layout main bottom"
+msgstr ""
+
+#: pages/models.py
+msgid "layout aside"
+msgstr ""
+
+#: pages/models.py
+msgid "icon size"
+msgstr ""
 
 #: pages/models.py
 msgid "Category page"
@@ -4092,15 +4165,15 @@ msgstr "har loggat in"
 msgid "contact for indicators"
 msgstr "kontakt för indikatorer"
 
-#: reports/blocks/action_content.py reports/wagtail_admin.py
-#, fuzzy
-#| msgid "Category type"
-msgid "Report type"
-msgstr "Kategorityp"
-
 #: reports/blocks/action_content.py
 msgid "UUID of report field"
 msgstr "UUID för rapportfält"
+
+#: reports/blocks/action_content.py
+#, fuzzy
+#| msgid "usable for indicator categorization"
+msgid "Report comparison"
+msgstr "användbar för kategorisering av indikatorer"
 
 #: reports/blocks/action_content.py
 #, fuzzy
@@ -4123,6 +4196,18 @@ msgstr "organisation"
 #: reports/blocks/action_content.py
 msgid "In addition to the organization itself, an organizational unit containing the organization is included in the report. Counting from the top-level root organisation at level 1, which level in the organizational hierarchy should be used to find this containing organization? If left empty, don't add the containing organization to the report."
 msgstr "Förutom själva organisationen ingår en organisationsenhet som innehåller organisationen i rapporten. Räknat från den översta rotorganisationen på nivå 1, vilken nivå i organisationshierarkin ska användas för att hitta den innehållande organisationen? Om det är tomt, lägg inte till den innehållande organisationen i rapporten."
+
+#: reports/blocks/choosers.py reports/wagtail_admin.py
+#, fuzzy
+#| msgid "Category type"
+msgid "Report type"
+msgstr "Kategorityp"
+
+#: reports/blocks/choosers.py
+#, fuzzy
+#| msgid "Category type"
+msgid "Report type field"
+msgstr "Kategorityp"
 
 #: reports/chooser.py
 #, fuzzy
@@ -4381,6 +4466,15 @@ msgstr "Användare"
 #: users/models.py
 msgid "No permission to remove the user belonging to plans you are not managing."
 msgstr "Inget tillstånd att ta bort användaren som tillhör planer som du inte hanterar."
+
+#~ msgid "contact form"
+#~ msgstr "kontaktformulär"
+
+#~ msgid "Attribute"
+#~ msgstr "Attribut"
+
+#~ msgid "Value attribute"
+#~ msgstr "Värdeattribut"
 
 #, fuzzy
 #~| msgid "last name"
