--- a/locale/django.pot
+++ b/locale/django.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-29 23:30+0300\n"
+"POT-Creation-Date: 2023-10-02 16:43+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3177,18 +3177,6 @@ msgstr ""
 msgid "metadata admins"
 msgstr ""
 
-#: orgs/org_admin_legacy.py
-msgid "Show only organizations in active plan"
-msgstr ""
-
-#: orgs/org_admin_legacy.py
-msgid "Show only editable organizations"
-msgstr ""
-
-#: orgs/org_admin_legacy.py
-msgid "Apply filters"
-msgstr ""
-
 #: orgs/views.py
 msgid "Add organization to active plan"
 msgstr ""
@@ -3318,7 +3306,7 @@ msgid "large"
 msgstr ""
 
 #: pages/blocks.py
-msgid "Height"
+msgid "Size"
 msgstr ""
 
 #: pages/blocks.py
