--- a/locale/lv/LC_MESSAGES/django.po
+++ b/locale/lv/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-29 23:30+0300\n"
+"POT-Creation-Date: 2023-10-02 16:43+0300\n"
 "PO-Revision-Date: 2023-09-10 12:07+0300\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -3176,18 +3176,6 @@ msgstr ""
 msgid "metadata admins"
 msgstr ""
 
-#: orgs/org_admin_legacy.py
-msgid "Show only organizations in active plan"
-msgstr ""
-
-#: orgs/org_admin_legacy.py
-msgid "Show only editable organizations"
-msgstr ""
-
-#: orgs/org_admin_legacy.py
-msgid "Apply filters"
-msgstr ""
-
 #: orgs/views.py
 msgid "Add organization to active plan"
 msgstr ""
@@ -3317,7 +3305,7 @@ msgid "large"
 msgstr ""
 
 #: pages/blocks.py
-msgid "Height"
+msgid "Size"
 msgstr ""
 
 #: pages/blocks.py
